--- a/Docker/ClusterKitMonitoring/clusterkit-web/package.json
+++ b/Docker/ClusterKitMonitoring/clusterkit-web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "create-react-class": "^15.6.0",
     "d3": "^4.7.4",
     "formsy-react": "^0.19.2",
     "formsy-react-components": "^0.10.1",
@@ -20,7 +21,7 @@
     "react-dom": "^15.4.2",
     "react-fa": "^4.1.2",
     "react-relay": "^0.10.0",
-    "react-relay-network-layer": "^2.0.0",
+    "react-relay-network-layer": "^2.0.1",
     "react-router": "^3.0.2",
     "react-router-bootstrap": "^0.23.1",
     "react-router-relay": "^0.13.5"
@@ -36,5 +37,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": "http://entry/clusterkit"
+  "homepage": "http://entry/clusterkit",
+  "proxy": "http://entry/"
 }
